ArmorClass, Hitpoints, proficiency, and other alignment issues

--- a/src/App.css
+++ b/src/App.css
@@ -196,6 +196,8 @@ img {
     font-size: 12px;
 }
 
+.proficiency,
+.hitpoints,
 .armorClass {
     border: 1px black solid;
     border-radius: 20px;
